@@ -1,3 +1,12 @@
+2006-06-10  Walter Doerwald  <walter@livinglogic.de>
+
+	* IPython/Extensions/ibrowse.py: Add a class _CommandInput that
+	implements the basic functionality of browser commands that require
+	input. Reimplement the goto, find and findbackwards commands as
+	subclasses of _CommandInput. Add an input history and keymaps to those
+	commands. Add "\r" as a keyboard shortcut for the enterdefault and
+	execute commands.
+
 2006-06-07  Ville Vainio  <vivainio@gmail.com>
 
 	* iplib.py: ipython mybatch.ipy exits ipython immediately after
